# ChangeLog for sys-devel/gcc
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.611 2007/02/14 11:09:16 vapier Exp $

*gcc-4.1.2 (14 Feb 2007)

  14 Feb 2007; Mike Frysinger <vapier@gentoo.org> +gcc-4.1.2.ebuild:
  Version bump.

  13 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> gcc-4.1.1-r3.ebuild:
  Stable on sparc for 2007.0

  12 Feb 2007; Bryan Østergaard <kloeri@gentoo.org> gcc-4.1.1-r3.ebuild:
  Stable on Alpha + IA64, bug 160663.

  06 Feb 2007; Simon Stelling <blubb@gentoo.org> gcc-4.1.1-r3.ebuild:
  stable on amd64; bug 160663

*gcc-4.0.4 (05 Feb 2007)

  05 Feb 2007; Mike Frysinger <vapier@gentoo.org> +gcc-4.0.4.ebuild:
  Version bump.

  21 Jan 2007; Mike Frysinger <vapier@gentoo.org>:
  Move snapshots to toolchain overlay.

  08 Jan 2007; Christian Faulhammer <opfer@gentoo.org> gcc-4.1.1-r3.ebuild:
  stable x86, bug #160663

  08 Jan 2007; Joseph Jezak <josejx@gentoo.org> gcc-4.1.1-r3.ebuild:
  Marked ppc stable for bug #160663.

  08 Jan 2007; Markus Rothe <corsair@gentoo.org> gcc-4.1.1-r3.ebuild:
  Stable on ppc64; bug #160663

  08 Jan 2007; Mike Frysinger <vapier@gentoo.org> gcc-4.1.1-r1.ebuild,
  gcc-4.1.1-r3.ebuild:
  Force binutils-2.17+ to make sure the assembler supports secureplt #160709.

  08 Jan 2007; Jeroen Roovers <jer@gentoo.org> gcc-4.1.1-r3.ebuild:
  Stable for HPPA (bug #160663).

  02 Jan 2007; Andrej Kacian <ticho@gentoo.org> gcc-3.3.6-r1.ebuild:
  Stable on x86, bug #159459.

  01 Jan 2007; Joseph Jezak <josejx@gentoo.org> gcc-3.4.6-r2.ebuild:
  Marked ppc stable for bug #159460.

  30 Dec 2006; Tom Gall <tgall@gentoo.org> gcc-3.4.6-r2.ebuild:
  stable on ppc64, bug #159250

  30 Dec 2006; Andrej Kacian <ticho@gentoo.org> gcc-3.4.6-r2.ebuild:
  Stable on x86, bug #159250.

*gcc-2.95.3-r10 (30 Dec 2006)

  30 Dec 2006; Mike Frysinger <vapier@gentoo.org> +gcc-2.95.3-r10.ebuild:
  Add support for toolchain.eclass #124578 by Harald van Dijk.
