@@ -16,3 +16,6 @@ SHA256 27ff25099ca8617fe2a76cf8ea06acaab39cff9eb91ef64c84971ba324a664e9 gcc-3.4.
 MD5 4a21ac777d4b5617283ce488b808da7b gcc-3.4.6.tar.bz2 28193401
 RMD160 b15003368cedc7964f6ceaee0c39ddc43a46c442 gcc-3.4.6.tar.bz2 28193401
 SHA256 7791a601878b765669022b8b3409fba33cc72f9e39340fec8af6d0e6f72dec39 gcc-3.4.6.tar.bz2 28193401
+MD5 facee49bd9f7b3c586d4ed96e9682ead gdc-0.23-src.tar.bz2 1001644
+RMD160 a208ea83f8049633ef067a5182320dc821ee96eb gdc-0.23-src.tar.bz2 1001644
+SHA256 4f642904f93973dc791c93125d1d227cefe0eb47fc39e364d03cda4784c0a38d gdc-0.23-src.tar.bz2 1001644
