@@ -7,3 +7,6 @@ SHA256 c6ed88711a727ed11847c9b9f1cef7023037bc80c0840eda5fca6d60fa02e35a gcc-4.1.
 MD5 a4a3eb15c96030906d8494959eeda23c gcc-4.1.2.tar.bz2 39707720
 RMD160 7c5d78e666ccf4c2b2c3db41e2388f08b6cdf722 gcc-4.1.2.tar.bz2 39707720
 SHA256 cfc0efbcc6fcde0d416a32dfb246c9df022515a312683fac412578c4fd09a9bc gcc-4.1.2.tar.bz2 39707720
+MD5 facee49bd9f7b3c586d4ed96e9682ead gdc-0.23-src.tar.bz2 1001644
+RMD160 a208ea83f8049633ef067a5182320dc821ee96eb gdc-0.23-src.tar.bz2 1001644
+SHA256 4f642904f93973dc791c93125d1d227cefe0eb47fc39e364d03cda4784c0a38d gdc-0.23-src.tar.bz2 1001644
